..F....... [ZBX-21816] fixed incorrect 'i' icon alignment in Problems compact view
Merge in ZBX/zabbix from feature/ZBX-21816-5.0 to release/5.0

* commit 'b2455388f4e1fa30271d0e3553639331dd6708a3':
  ..F....... [ZBX-21816] fixed incorrect 'i' icon alignment in Problems compact view

(cherry picked from commit 6cc352a9860b626f1e6f684753e78c689533734a)
(cherry picked from commit 2f57ba7afb361f1c3064e0295759ffc017eec2b5)

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -455,8 +455,6 @@ form {
 			white-space: nowrap;
 
 			[class*='icon-'] {
-				vertical-align: middle;
-
 				&::after {
 					margin: 0;
 					line-height: 14px;
